Implemented LoginService
